--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "a42581e97bb3e602dcb06e40d500df03"
 name = "fx-test-app"
 handle = "fx-test-app"
-application_url = "https://trustees-informed-suggested-rn.trycloudflare.com"
+application_url = "https://gibraltar-subdivision-nav-ranks.trycloudflare.com"
 embedded = true
 
 [build]
@@ -21,16 +21,15 @@ api_version = "2025-04"
   topics = [ "app/scopes_update" ]
   uri = "/webhooks/app/scopes_update"
 
-
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products, write_discounts, write_discounts_allocator_functions, read_products"
+scopes = "write_discounts, write_discounts_allocator_functions, read_products"
 
 [auth]
 redirect_urls = [
-  "https://trustees-informed-suggested-rn.trycloudflare.com/auth/callback",
-  "https://trustees-informed-suggested-rn.trycloudflare.com/auth/shopify/callback",
-  "https://trustees-informed-suggested-rn.trycloudflare.com/api/auth/callback"
+  "https://gibraltar-subdivision-nav-ranks.trycloudflare.com/auth/callback",
+  "https://gibraltar-subdivision-nav-ranks.trycloudflare.com/auth/shopify/callback",
+  "https://gibraltar-subdivision-nav-ranks.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
